# bevy_cursed_editor

./: .gitignore  Cargo.toml  LICENSE  README.md
codegen/: Cargo.toml
codegen/src/: commands.rs  lib.rs  model.rs
codegen/src/templates/: default_game.rs  default_plugin.rs  mod.rs
editor/: Cargo.toml
editor/bevy_test/: Cargo.toml
editor/bevy_test/src/: main.rs
editor/src/: bin.rs
editor/src/ui/: mod.rs
src/: bin.rs  lib.rs  main.rs
