[package]
name = "bevy_cg_editor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "bevy_cg_lib"
path = "src/lib.rs"

[[bin]]
name = "bevy_cg_cli"
path = "src/bin.rs"

[dependencies]
codegen = "0.1.3"#{ path = "../codegen" } #{ git = "https://github.com/BlackPhlox/codegen" } #"0.1.3"
clap = { version = "3.0.14", features = ["derive"] }
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.78"