[package]
name = "bevy_codegen"
version = "0.1.0"
edition = "2021"

[lib]
name = "bevy_codegen"
path = "src/lib.rs"

[dependencies]
codegen = "0.1.3"#{ path = "../codegen" } #{ git = "https://github.com/BlackPhlox/codegen" } #"0.1.3"
clap = { version = "3.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"