[package]
name = "bevy_cursed_editor"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "bevy_cursed_editor"
path = "src/bin.rs"

[dependencies]
codegen = "0.1.3"#{ path = "../codegen" } #{ git = "https://github.com/BlackPhlox/codegen" } #"0.1.3"
bevy_codegen = { path = "../codegen" }
clap = { version = "3.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"