[package]
name = "bevy_cursed_editor"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "bevy_cursed_editor"
path = "src/bin.rs"

[dependencies]
codegen = "0.1.3"#{ path = "../codegen" } #{ git = "https://github.com/BlackPhlox/codegen" } #"0.1.3"
bevy_codegen = { path = "../codegen" }
clap = { version = "3.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

bevy_egui = "0.15.0"
bevy = "0.8"
cli-clipboard = "0.2.1"
bevy_editor_pls = { git = "https://github.com/MitchellMarinoDev/bevy_editor_pls", branch = "main" }
bevy_infinite_grid = { git = "https://github.com/ForesightMiningSoftwareCorporation/bevy_infinite_grid", branch = "main" }
bevy_mod_picking = { git = "https://github.com/aevyrie/bevy_mod_picking/", branch = "release" }
bevy_transform_gizmo = { git = "https://github.com/ForesightMiningSoftwareCorporation/bevy_transform_gizmo", branch = "release" }