[package]
name = "bevy_cursed_editor"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "bevy_cursed_editor"
path = "src/bin.rs"

[dependencies]
codegen = "0.2"#{ path = "../codegen" } #{ git = "https://github.com/BlackPhlox/codegen" } #"0.2"
bevy_codegen = { path = "../codegen" }
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

bevy_egui = "0.17.1"
bevy = "0.9"
cli-clipboard = "0.3.0"
undo = "0.47"
bevy_editor_pls = "0.2"
#bevy_infinite_grid = { git = "https://github.com/ForesightMiningSoftwareCorporation/bevy_infinite_grid", branch = "main" }
bevy_mod_picking = "0.10"
#bevy_transform_gizmo = { git = "https://github.com/ForesightMiningSoftwareCorporation/bevy_transform_gizmo", branch = "release" }