[package]
name = "bevy_test"
version = "0.1.0"
edition = "2021"

# Enable only a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

# Maximize release performance with Link-Time-Optimization
[profile.release]
lto = "thin"
codegen-units = 1

[target.'cfg(target_os = "linux")'.dependencies]
winit = { version = "0.26.1", features=["x11"]}

[dependencies]

[dependencies.bevy]
version = "0.7"
features = ["dynamic"]

[dev-dependencies.bevy]
version = "0.7"
default-features = false

